--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -107,6 +107,7 @@
     width: 100%;
     max-width: 1300px;
     padding: 0 50px;
+    padding-top: 0; /* Remove top padding */
 }
 
 .main__content {
@@ -360,4 +361,28 @@
 
 .login__container button {
     margin: 10px;
+}
+
+/* New navbar user styles */
+.navbar__user {
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 1rem;
+    height: 100%;
+}
+
+.flash-messages {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    background-color: #2d3142; /* Same as header background */
+    color: #fff;
+}
+
+.flash-message {
+    padding: 10px 50px;
+    text-align: center;
+    font-size: 1rem;
 }
