--- a/templates/header.html
+++ b/templates/header.html
@@ -2,13 +2,18 @@
 <html lang="en">
 <nav class="navbar">
   <div class="navbar__container">
-    <a href="/" id="navbar__logo"></i>SIGNTIME</a>
+    <a href="/" id="navbar__logo">SIGNTIME</a>
     <ul class="navbar__menu">
       <li class="navbar__item navbar__btn"><a href="/" class="buttons">Home</a></li>
-      <li class="navbar__item navbar__btn"><a href="/dictionary" class="buttons">Dictonary</a></li>
+      <li class="navbar__item navbar__btn"><a href="/dictionary" class="buttons">Dictionary</a></li>
       <li class="navbar__item navbar__btn"><a href="/SignAi" class="buttons">SignAi</a></li>
-      <li class="navbar__btn"><a href="/login" class="button">Login</a></li>
-      <li class="navbar__btn"><a href="/register" class="button">Signup</a></li>
+      {% if current_user.is_authenticated %}
+        <li class="navbar__item navbar__user">Welcome, {{ current_user.username }}!</li>
+        <li class="navbar__btn"><a href="{{ url_for('logout') }}" class="button">Logout</a></li>
+      {% else %}
+        <li class="navbar__btn"><a href="{{ url_for('login') }}" class="button">Login</a></li>
+        <li class="navbar__btn"><a href="{{ url_for('register') }}" class="button">Signup</a></li>
+      {% endif %}
     </ul>
   </div>
 </nav>
