--- a/templates/register.html
+++ b/templates/register.html
@@ -1,14 +1,24 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-<h1>Register</h1>
-{% if error %}
-<p class="error">{{ error }}</p>
-{% endif %}
-<form method="POST">
-    <input type="text" name="username" placeholder="Username" required>
-    <input type="password" name="password" placeholder="Password" required>
-    <button type="submit">Register</button>
-</form>
-<p>Already have an account? <a href="{{ url_for('sign_ai') }}">Login</a></p>
+<div class="auth-container">
+    <h1>Register</h1>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <ul class="flash-messages">
+                {% for message in messages %}
+                    <li class="flash-message">{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+    {% endwith %}
+    <form class="auth-form" method="POST">
+        <input type="text" name="username" placeholder="Username" required>
+        <input type="password" name="password" placeholder="Password" required>
+        <button type="submit">Register</button>
+    </form>
+    <div class="auth-links">
+        <p>Already have an account? <a href="{{ url_for('login') }}">Login</a></p>
+    </div>
+</div>
 {% endblock %}
