--- a/templates/footer.html
+++ b/templates/footer.html
@@ -4,7 +4,7 @@
       <div class="footer__link--wrapper">
         <div class="footer__link--items">
           <h2>About Us</h2>
-          <a href="/templates/SignAi.html">Terms of Service</a>
+          <a href="{{ url_for('terms_and_conditions') }}">Terms and Conditions</a>
         </div>
         <div class="footer__link--items">
           <h2>Contact Us</h2>
