--- a/templates/footer.html
+++ b/templates/footer.html
@@ -7,8 +7,9 @@
           <a href="{{ url_for('terms_and_conditions') }}">Terms and Conditions</a>
         </div>
         <div class="footer__link--items">
-          <h2>Contact Us</h2>
+          <h2>Help</h2>
           <a href="/">Contact</a> 
+          <a href="{{ url_for('terms') }}">Sign Language Terms</a>
         </div>
       </div>
       <div class="footer__link--wrapper">
