--- a/templates/register.html
+++ b/templates/register.html
@@ -13,7 +13,7 @@
         {% endif %}
     {% endwith %}
     <form class="auth-form" method="POST">
-        <input type="text" name="username" placeholder="Username" required>
+        <input type="text" name="username" placeholder="Username" maxlength="20" required>
         <input type="password" name="password" placeholder="Password" required>
         <button type="submit">Register</button>
     </form>
