--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
       <div class="main__content">
         <h1>Be One With The Future</h1>
         <h2>TECHNOLOGY!!!</h2>
-        <button class="main__btn"><a href="#">Get Started</a></button>
+        <button class="main__btn"><a href="{{ url_for('login') }}">Get Started</a></button>
       </div>
       <div class="main__img--container">
         <img id="main__img" src="static/images/pic1.jpg" />
