--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,38 +4,38 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>contact form</title>
+    <title>Contact Form</title>
 </head>
 
 <body>
 
-<link href="contact-form.css" rel="stylesheet">
+<link href="{{ url_for('static', filename='css/contact-form.css') }}" rel="stylesheet">
 
 <div class="fcf-body">
 
     <div id="fcf-form">
-    <h3 class="fcf-h3">Contact us</h3>
+    <h3 class="fcf-h3">Contact Us</h3>
 
-    <form id="fcf-form-id" class="fcf-form-class" method="post" action="contact-form-process.php">
+    <form id="fcf-form-id" class="fcf-form-class" method="post" action="{{ url_for('submit_contact_form') }}">
         
         <div class="fcf-form-group">
-            <label for="Name" class="fcf-label">Your name</label>
+            <label for="Name" class="fcf-label">Your Name</label>
             <div class="fcf-input-group">
-                <input type="text" id="Name" name="Name" class="fcf-form-control" required>
+                <input type="text" id="Name" name="name" class="fcf-form-control" required>
             </div>
         </div>
 
         <div class="fcf-form-group">
-            <label for="Email" class="fcf-label">Your email address</label>
+            <label for="Email" class="fcf-label">Your Email Address</label>
             <div class="fcf-input-group">
-                <input type="email" id="Email" name="Email" class="fcf-form-control" required>
+                <input type="email" id="Email" name="email" class="fcf-form-control" required>
             </div>
         </div>
 
         <div class="fcf-form-group">
-            <label for="Message" class="fcf-label">Your message</label>
+            <label for="Message" class="fcf-label">Your Message</label>
             <div class="fcf-input-group">
-                <textarea id="Message" name="Message" class="fcf-form-control" rows="6" maxlength="3000" required></textarea>
+                <textarea id="Message" name="message" class="fcf-form-control" rows="6" maxlength="3000" required></textarea>
             </div>
         </div>
 
@@ -44,7 +44,7 @@
         </div>
 
         <div class="fcf-credit" id="fcf-credit">
-        Simple HTML email form provided by <a href="https://www.majesticform.com" target="_blank">MajesticForm</a>
+        Your message will be stored in our database.
         </div>
 
     </form>
