--- a/templates/footer.html
+++ b/templates/footer.html
@@ -8,7 +8,7 @@
         </div>
         <div class="footer__link--items">
           <h2>Help</h2>
-          <a href="/">Contact</a> 
+          <a href="{{ url_for('contact') }}">Contact</a> 
           <a href="{{ url_for('terms') }}">Sign Language Terms</a>
         </div>
       </div>
