--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
   <div class="main">
     <div class="main__container">
       <div class="main__content">
-        <h1>Be One With The Future</h1>
+        <h1>Be One With The Future of</h1>
         <h2>TECHNOLOGY!!!</h2>
         <button class="main__btn"><a href="{{ url_for('login') }}">Get Started</a></button>
       </div>
